Outsourced text in sites to message files.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,28 @@
 application.name=MyLights
+
+form.password=Password
+form.login=Login
+form.error=That did not work :(
+
+duration=Duration
+duration.seconds=Seconds
+duration.minutes=Minutes
+duration.hours=Hours
+duration.days=Days
+
+mode=Mode
+mode.fading=Fading colors
+
+overlay.group.new.headline=New group
+overlay.group.new.text=Please type in a name for the new group:
+overlay.group.rename.headline=Rename group
+overlay.group.rename.text=Please type in a new name for the group:
+overlay.group.delete.headline=Delete group
+overlay.group.delete.text=Do you really want to delete this group?
+overlay.module.rename.headline=Rename module
+overlay.module.rename.text=Please type in a new name for the module:
+overlay.module.assign.headline=Assign Module
+overlay.module.unassign.headline=Remove Module
+overlay.module.unassign.text=Do you really want to remove this module from its group?
+overlay.error.headline=Error
+overlay.error.text=That did not work :(
