--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,1 +1,28 @@
 application.name=MyLights
+
+form.password=Passwort
+form.login=Einloggen
+form.error=Das hat leider nicht geklappt :(
+
+duration=Dauer
+duration.seconds=Sekunden
+duration.minutes=Minuten
+duration.hours=Stunden
+duration.days=Tage
+
+mode=Modus
+mode.fading=Überlaufende Farben
+
+overlay.group.new.headline=Neue Gruppe
+overlay.group.new.text=Bitte geben Sie einen Namen für die Gruppe ein:
+overlay.group.rename.headline=Gruppe umbenennen
+overlay.group.rename.text=Bitte geben Sie einen neuen Namen für die Gruppe ein:
+overlay.group.delete.headline=Gruppe löschen
+overlay.group.delete.text=Wollen Sie diese Gruppe wirklich löschen?
+overlay.module.rename.headline=Modul umbenennen
+overlay.module.rename.text=Bitte geben Sie einen neuen Namen für das Modul ein:
+overlay.module.assign.headline=Module zuweisen
+overlay.module.unassign.headline=Modul entfernen
+overlay.module.unassign.text=Wollen Sie das Modul wirklich aus der Gruppe entfernen?
+overlay.error.headline=Fehler
+overlay.error.text=Das hat leider nicht geklappt :(
