Implemented functionality to change the password.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,5 @@ overlay.module.unassign.headline=Remove Module
 overlay.module.unassign.text=Do you really want to remove this module from its group?
 overlay.error.headline=Error
 overlay.error.text=That did not work :(
+overlay.settings=Settings
+overlay.settings.changePass=Change password
