--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -26,3 +26,5 @@ overlay.module.unassign.headline=Modul entfernen
 overlay.module.unassign.text=Wollen Sie das Modul wirklich aus der Gruppe entfernen?
 overlay.error.headline=Fehler
 overlay.error.text=Das hat leider nicht geklappt :(
+overlay.settings=Einstellungen
+overlay.settings.changePass=Passwort ändern
